2002-02-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_set_attr_by_id): split out into
	(do_set_attr): here.
	(bonobo_ui_node_try_set_attr): impl.

	* bonobo/bonobo-ui-engine.c (set_cmd_attr): only
	signal / re-build if different.

2002-02-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (set_cmd_attr):
	take a quark

2002-01-31  Jens Finke <jens@triq.net>

	* bonobo/bonobo-property-control.c (bonobo_property_control_new):
	Don't create property control object here. This is done by
	bonobo_property_control_new_full.

2002-01-29  Michael Meeks  <michael@ximian.com>

	* Version 1.110.0

2002-01-28  Szabolcs Ban <shooby@gnome.hu>

	* configure.in Added Hungarian language.

2002-01-28  Alexander Shopov  <al_shopov@web.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian).

2002-01-25  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-ui-util.c: (bonobo_ui_util_xml_to_pixbuf),
	(bonobo_ui_util_build_help_menu): Wean from <ctype.h>, use
	new g_ascii_xxx calls instead.

2002-01-25  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_state): fix silly
	with sensitivity.

2002-01-24  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c
	(bonobo_ui_toolbar_control_item_set_sensitive): impl.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_state): add sensitivity
	set for controls.

	* bonobo/bonobo-ui-toolbar.c
	(hide_not_fitting_items): remove cruft.

2002-01-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (state_update_new):
	sensitivity fix from stable.

2002-01-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-preferences.c
	(bonobo_ui_gconf_leaks_refs): allow gconf to be turned off.
	(bonobo_ui_preferences_get_toolbar_style): upd.
	(bonobo_ui_preferences_add_engine): upd.
	(bonobo_ui_preferences_remove_engine): upd.
	(get): upd.

	* tests/test-ui-auto.c: add.
